# ydiskarc

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  HISTORY.rst  LICENSE  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
dev/docs/: ANALYSIS_AND_IMPROVEMENTS.md
examples/: METADATA_STRUCTURE.md  README.md  metadata_example.json
tests/: README.md  __init__.py  conftest.py  test_core.py  test_processor.py
ydiskarc/: __init__.py  __main__.py  config.py  core.py
ydiskarc/cmds/: processor.py
